syntax = "proto3";
option java_multiple_files = true;
package com.demo.grpc.ping_pong_service;

message PingRequest {
  string ping = 1;
}

message PongResponse {
  string pong = 1;
}

service PingPongService {
  rpc pingPong(PingRequest) returns (PongResponse);
}